--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
         </div>
     </header>
     <section class="container mt-2">
+        <div class="row mt-3 mb-4 shadow-sm bg-dark text-light rounded-3 text-center">
+            <h1>Booking Form</h1>
+        </div>
         <div class="row">
             <div class="col-lg-3 border border-end-0 border-top-0 border-bottom-0 border-5 border-secondary rounded-start ">
                 <h3>Custumer Details</h3>
