--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             }
             var nowYearStr = nowYear+"";
             var DateStr = nowYearStr+"-"+nowMonthStr+"-"+nowDateStr
+            var maxDateStr = (parseInt(nowYearStr)+1)+"-"+nowMonthStr+"-"+nowDateStr
             document.getElementById("txtDate").value=DateStr;
             document.getElementById("txtDate").min=DateStr;
+            document.getElementById("txtDate").max = maxDateStr;
         }
         function VerifyName(){
             var VerifyName=/[a-zA-Z ]{2,100}/
@@ -151,7 +153,7 @@
         
         function bookClick(){
             var Name = document.getElementById("txtName").value;
-            var VerifyName=/[a-zA-Z]{2,100}/
+            var VerifyName=/[a-zA-Z ]{2,100}/
             var Mobile = document.getElementById("txtMobile").value;
             var VerifyMob = /[6-9]{1}[0-9]{9}/
             var Date = document.getElementById("txtDate").value;
@@ -187,8 +189,9 @@
             }
             var Advance = document.getElementById("txtAdvance").value;
             var Totel = 0;
-            if (Name==""){
+            if (Name.trim()==""){
                 alert("Please Enter Customer Name.")
+                document.getElementById("txtName").value = "";
             }else if(Mobile==""){
                 alert("Please Enter Mobile Number.")
             }else if(Date == ""){
@@ -231,7 +234,7 @@
                 document.getElementById("lblTotel").innerHTML ="&#8377; "+ (GrossTotel - Advance )+ "/-";
                 var VerifySubmit = confirm("Are you sure want to submit your details?")
                 if(VerifySubmit==true){
-                    alert("Your Booking is Compleated.\n Click 'Preview Details' button for show your bill summary.")
+                    alert("Your Booking is Compleated.\nClick 'Preview Details' button for show your bill summary.")
                     document.getElementById("Preview").style.display="flex"
                     document.getElementById("txtName").value="";
                     document.getElementById("txtMobile").value="";
@@ -281,7 +284,7 @@
                     <dt class="col-lg-4">Customer Mobile Number</dt>
                     <dd class="col-lg-8"><input type="text" onkeyup="VerifyMobile()" minlength="10" maxlength="10" class="form-control" id="txtMobile"><span id="msgMobile"></span></dd>
                     <dt class="col-lg-4">Check-in Date</dt>
-                    <dd class="col-lg-8"><input type="date" class="form-control" id="txtDate"><span id="msgDate"></span></dd>
+                    <dd class="col-lg-8"><input type="date" onkeydown="return false" class="input-medium search-query form-control" id="txtDate"><span id="msgDate"></span></dd>
                     <dt class="col-lg-4">Totel Number of Days</dt>
                     <dd class="col-lg-8"><input type="number" onblur="VerifyDays()" min="1" max="30" value="1" class="form-control" id="txtDays"><span id="msgDays"></span></dd>
                     <dt class="col-lg-4">Totel Number of Person</dt>
@@ -430,9 +433,6 @@
             </div>
         </div>
     </section>
-
-
-
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
