--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="col-lg-9 mt-4 border-start border-1">
                 <dl class="row">
                     <dt class="col-lg-3">Advance Amount</dt>
-                    <dd class="col-lg-9"><input type="number" onfocus="bodyload()" onkeyup="VerifyAdvanceNum()" onblur="VerifyAdvance()" min="500" class="form-control" id="txtAdvance"><span id="msgAdvance" class="msg">Note: You can pay minimum Rs.500 Advance.</span></dd> 
+                    <dd class="col-lg-9"><input type="number" onfocus="bodyload()" onkeyup="VerifyAdvanceNum()" onblur="VerifyAdvance()" min="500" value="500" class="form-control" id="txtAdvance"><span id="msgAdvance" class="msg">Note: You can pay minimum Rs.500 Advance.</span></dd> 
                 </dl>
             </div>
         </div>
